--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,50 @@
+<!--<footer class="container-fluid bh-absolute-bottom">
+    <div class="row footer"> 
+            
+        
+     
+        <div class="col-12  align-self-center "><strong>© Arte del Sueño VZW </strong>| <a href="mailto: info@artedelsueno.be">info@artedelsueno.be</a> Toekomststraat 29 B-8530 Harelbeke</div>
+   
+
+        <div class="col-12  align-self-center ">Deze huisstijlgids werd ontwikkeld door Hannes Otté i.s.m. Arteveldehogeschool Gent</div>
+  
+        <img src="/images/AHS_wit.svg" class="footer_img">
+        <img src="/images/logo-02.svg" class="footer_img">
+    
+       
+    </div>
+
+
+</footer>-->
+
+
 <footer class="container-fluid bh-absolute-bottom">
     <div class="row">
-        <div class="col">footer</div>
+        <div class="col">
+           
+             
+            <div class="row">
+                <div class="col-12 col-md3 col-lg-12 text-center">
+                    <p class=""><strong>Copyright © | 2018 | Arte del Sueño VZW |</strong> All rights reserved</p>
+                    <p class="">Deze huisstijlgids werd opgemaakt door Hannes Otté i.s.m. Arteveldehogeschool Gent.</p> 
+
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md3 col-lg-4">
+                  
+                </div>
+                <div class="col-12 col-md3 col-lg-4 text-center">
+                   
+                        <a href="https://www.arteveldehogeschool.be/">    <img src="/images/AHS_wit.svg" class="footer_img" alt="logo"></a>
+                       <a href="http://www.artedelsueno.be">    <img src="/images/logo-02.svg" alt="logo" class="footer_img"></a>
+                </div>
+                
+                
+             </div>
+        </div>
+
+        <button onclick="topFunction()" id="to-top" style="display: block;"><svg class="svg-inline--fa fa-angle-up fa-w-10" aria-hidden="true" data-prefix="fas" data-icon="angle-up" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 400 320 1" data-fa-i2svg=""><path fill="#fff" d="M177 159.7l136 136c9.4 9.4 9.4 24.6 0 33.9l-22.6 22.6c-9.4 9.4-24.6 9.4-33.9 0L160 255.9l-96.4 96.4c-9.4 9.4-24.6 9.4-33.9 0L7 329.7c-9.4-9.4-9.4-24.6 0-33.9l136-136c9.4-9.5 24.6-9.5 34-.1z"></path></svg></button>    
     </div>
 </footer>
-
-<button onclick="topFunction()" id="to-top" ><i class="fas fa-angle-up"></i></button>
