--- a/_sass/_client-style.scss
+++ b/_sass/_client-style.scss
@@ -10,12 +10,11 @@
     font-family: $clientfont-family-title;
   }
 
-  a {
-    color: $clientcolor-5;
-    &:hover {}
-    &:active {}
-    &:focus{}
+  h1 {
+
   }
+
+  
 
   // …
   
