--- a/_layouts/vertical.html
+++ b/_layouts/vertical.html
@@ -3,30 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{ page.title }} | Huistijlgids - Mijn Klant</title>
+    <title>{{ page.title }} || Arte del Sueño - Huisstijlgids</title>
     <!-- stylesheets -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/afeld/bootstrap-toc/v0.4.1/dist/bootstrap-toc.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}{% link assets/css/app.scss %}">
+    <link rel="icon" href="/assets/images/logo.png"  type="image/png" />
+
 </head>
 <body data-spy="scroll" data-target="#toc">  
 
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-12 col-md-3 col-lg-2">
-            {% include nav_ver_c.html %}
+        <div class="container-fluid " >
+                
+                        <div class="row d-flex justify-content-center prenav">
+                            <a class="navbar-brand" href="#"><img src="../images/logo-02.svg"></a>
+                        </div>
+                    
+        <div class="d-flex flex-column" id="top">
+            <div class="row">
+                <div class="col-12 col-md-3 col-lg-2 navigatie">
+                    {% include nav_ver_c.html %}
+                </div>
+                <!--<div class="col-12 col-md-3 col-lg-2 order-md-12 pt-5">
+                    <nav id="toc" data-toggle="toc"></nav>
+                </div>-->
+                <main class="col-12 col-md-6 col-lg-7 order-md-1 pt-5">
+                
+                    {{ content }}
+
+                    
+                <div class="pushbottom"></div>
+
+                </main>
+            </div>
         </div>
-        <div class="col-12 col-md-3 col-lg-2 order-md-12 pt-5">
-            <nav id="toc" data-toggle="toc"></nav>
         </div>
-        <main class="col-12 col-md-6 col-lg-8 order-md-1 pt-5">
-            {{ content }}
-        </main>
+        
+        <div class="row">
+        {% include footer.html %}
+        {% include scripts-bottom.html %}
+        
     </div>
-</div>
-
-{% include footer.html %}
-{% include scripts-bottom.html %}
-
-</body>
-</html>
+        </body>
+        </html>
