--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -5,48 +5,74 @@ body {
     font-weight: $font-weight-base;
     font-size: $font-size-base;
     line-height: $lineheight-base;
-    background-color: $body-bg;
-    color: $body-color;
+    background-color: $mycolor-4;
+    color: $mycolor-3;
 }
 
+@font-face {
+    font-family: "ITCAvantGardeStd-Demi";
+    src: url("../fonts/font/ITCAvantGardeStd-Demi.otf");
+  }
+
 h1, h2, h3, h4, h5, h6 {
-    font-family: $myfont-family-title;
-    font-weight: $font-weight-bold;
+    font-family: "ITCAvantGardeStd-Demi", "roboto", "sans-serif";
 }
 
 h1 {
-    font-weight: $font-weight-light;
-    font-size: 4rem;
-    color: $color-grey-2;
+    font-weight: $font-weight-bold;
+    font-size: 2.5rem;
+    color: $color-white;
+    background-color: $mycolor-1;
+    display: inline;
+    text-transform: uppercase;
+    font-weight: 1000;
+    letter-spacing: .5px;
+    padding: 0.23em 0 0 0;
 }
+
+
 h2 {
-    font-weight: $font-weight-light;
-    font-size: 2rem;
+    font-weight: $font-weight-base;
+    font-size: 1.8rem;
     margin: 2rem 0 1rem;
+    text-transform: uppercase;
+    color: $mycolor-3;
 }
 h3, h4, h5, h6 {
     font-size: 1rem;
     margin: 2rem 0 0;
+    color: $mycolor-3;
 }
-a {
+p a {
     text-decoration: none;
-    color: $body-link;
-    border-bottom: dotted 1px $body-link;
+    color: $mycolor-1;
+    box-shadow: inset 0 -2px 0 $mycolor-1;
+    transition: box-shadow .3s ease-out,background-color .3s ease-out;
+
     &:hover{
-        color: $body-link;
+        color: $mycolor-1;
         text-decoration: none;
-        border-bottom: solid 1px $body-link;
-    }
-    &:active{
-        background-color: $body-link;
+        background-color: $mycolor-1;
         color: $color-white;
     }
-    &:focus{}
 }
-blockquote {
-    padding-left: 24px;
-    border-left: 2px solid $mycolor-5;
+
+
+.deliverables a {
+    text-decoration: none;
+    color: $mycolor-1;
+    box-shadow: inset 0 -2px 0 $mycolor-1;
+    transition: box-shadow .3s ease-out,background-color .3s ease-out;
+
+    &:hover{
+        color: $mycolor-1;
+        text-decoration: none;
+        background-color: $mycolor-1;
+        color: $color-white;
+    }
 }
+
+
 
 // ongeordende lijstjes met een ander symbool of kleur
 main ul {
@@ -58,7 +84,7 @@ main ul {
     text-indent: -25px;
     &:before {
         content:'\2022';
-        color: $mycolor-5;
+        color: $mycolor-1;
         margin-right: 18px;
     }    
   }
@@ -79,8 +105,8 @@ main ol {
         content: counter(i);    
         padding: 3px 6px;
         margin-right: 5px;
-        border-radius: 5px;
-        background-color: $mycolor-5;
+        border-radius: 50%;
+        background-color: $mycolor-3;
         color: $color-white;
         font-family: $myfont-family-title;
         font-weight: $font-weight-bold;
