--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -13,11 +13,11 @@ $color-grey-5:rgba(10,10,10,1);
 $color-black:rgba(0,0,0,1);
 
 // Website
-$mycolor-1:rgba(162,139,119,1);
-$mycolor-2:rgba(80,69,57,1);
-$mycolor-3:rgba(193,173,121,1);
-$mycolor-4:rgba(147,131,86,1);
-$mycolor-5:rgba(155,59,29,1);
+$mycolor-1:rgba(235,0,69,1);
+$mycolor-2:rgba(242,196,0,1);
+$mycolor-3:rgba(19,44,69,1);
+$mycolor-4:rgb(243, 243, 243);
+$mycolor-5:rgba(1,1,1,1);
 
 $body-bg: $color-white;
 $body-color: $color-grey-4;
@@ -37,18 +37,19 @@ $clientcolor-5:rgba(250,120,120,1);
 
 // Imports
 // Website
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
 
 // Client specific
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
+
 
 // type
-$myfont-family-base: 'Raleway', serif;
-$myfont-family-title: $myfont-family-base;
+$myfont-family-base: 'ITCAvantGardeStd-Bk', sans-serif;
+$myfont-family-title: 'ITCAvantGardeStd-Bold', sans-serif;
 
 // sizes
-$font-size-base: 16px;
-$lineheight-base: 1.6em;
+$font-size-base: 0.9em;
+$lineheight-base: 1.4em;
 $font-weight-base: 400;
 $font-weight-light: 200;
 $font-weight-bold: 800;
