--- a/_layouts/vertical.html
+++ b/_layouts/vertical.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.rawgit.com/afeld/bootstrap-toc/v0.4.1/dist/bootstrap-toc.min.css">
     <link rel="stylesheet" href="{{ site.baseurl }}{% link assets/css/app.scss %}">
-    <link rel="icon" href="/assets/images/logo.png"  type="image/png" />
+    <link rel="icon" href="/1718-3CMO-BaP-HannOtte/assets/images/logo.png"  type="image/png" />
 
 </head>
 <body data-spy="scroll" data-target="#toc">  
@@ -16,7 +16,7 @@
         <div class="container-fluid " >
                 
                         <div class="row d-flex justify-content-center prenav">
-                            <a class="navbar-brand" href="#"><img src="../images/logo-02.svg"></a>
+                            <a class="navbar-brand" href="#"><img src="/1718-3CMO-BaP-HannOtte/images/logo-02.svg"></a>
                         </div>
                     
         <div class="d-flex flex-column" id="top">
