--- a/pages/templates/ads.html
+++ b/pages/templates/ads.html
@@ -19,7 +19,7 @@ title: Templates Arte del Sueño
         <div class="firstcontentbox">   
                 <p>
             Het briefpapier werd opgemaakt op A4-formaat. De template is een Word-sjabloon.
-            <br>Dit document wordt niet gebruikt om <a href="">vergaderverslagen</a> op te stellen, maar gebruikt dezelfde marges.
+            <br>Dit document wordt niet gebruikt om <a href="../deliverables/">vergaderverslagen</a> op te stellen, maar gebruikt dezelfde marges.
             <br>De marges voor de eerste bladzijde wijken af van die van de volgende bladzijden van het document.
             </p>
             <div class="row">
