--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,8 +37,8 @@
                 </div>
                 <div class="col-12 col-md3 col-lg-4 text-center">
                    
-                        <a href="https://www.arteveldehogeschool.be/">    <img src="/images/AHS_wit.svg" class="footer_img" alt="logo"></a>
-                       <a href="http://www.artedelsueno.be">    <img src="/images/logo-02.svg" alt="logo" class="footer_img"></a>
+                        <a href="https://www.arteveldehogeschool.be/">    <img src="/1718-3CMO-BaP-HannOtte/images/AHS_wit.svg" class="footer_img" alt="logo"></a>
+                       <a href="http://www.artedelsueno.be">    <img src="/1718-3CMO-BaP-HannOtte/images/logo-02.svg" alt="logo" class="footer_img"></a>
                 </div>
                 
                 
