--- a/_layouts/vertical.html
+++ b/_layouts/vertical.html
@@ -16,7 +16,7 @@
         <div class="container-fluid " >
                 
                         <div class="row d-flex justify-content-center prenav">
-                            <a class="navbar-brand" href="#"><img src="/1718-3CMO-BaP-HannOtte/images/logo-02.svg"></a>
+                            <a class="navbar-brand" href="/1718-3CMO-BaP-HannOtte/"><img src="/1718-3CMO-BaP-HannOtte/images/logo-02.svg"></a>
                         </div>
                     
         <div class="d-flex flex-column" id="top">
